# thing

./: CMakeLists.txt  README.md  TODO.md  main.cpp
include/anatomy/: Finger.h  Hand.h  Thumb.h
include/articulation/: Constants.h  Easing.h  Joint.h  Motion.h
include/builder/: HandBuilder.h
include/control/: CommandLineController.h  IController.h
include/gestures/: Gestures.h
include/hardware/: FeetechServo.h  HardwareConstants.h  MacSerialBus.h  SCS0009.h  SCS0009Servo.h  SerialBus.h  Servo.h
include/hardware/bus/: LinuxSerialBus.h
include/hardware/protocol/: DummySCS0009ConsoleProtocol.h  FeetechServoProtocol.h  SCS0009Protocol.h
include/hardware/servo/: SCS0009Servo.h
include/telemetry/: Alert.h  IMonitorable.h  Reading.h  TelemetryManager.h
include/telemetry/alert/: Alert.h  AlertHandler.h  AlertRule.h  AlertRulesFactory.h  ReadingEvaluator.h
include/telemetry/logging/: LiveLogger.h
include/utility/: Utils.h
src/anatomy/: Finger.cpp  Hand.cpp  Thumb.cpp
src/articulation/: Joint.cpp
src/builder/: HandBuilder.cpp
src/control/: CommandLineController.cpp
src/hardware/: FeetechServo.cpp  LinuxSerialBus.cpp  MacSerialBus.cpp  SCS0009.cpp  SCS0009Servo.cpp
src/hardware/bus/: LinuxSerialBus.cpp  MacSerialBus.cpp
src/hardware/protocol/: FeetechServoProtocol.cpp  SCS0009Protocol.cpp
src/hardware/servo/: SCS0009Servo.cpp
src/telemetry/: TelemetryManager.cpp
src/telemetry/alert/: AlertHandler.cpp  AlertRulesFactory.cpp  ReadingEvaluator.cpp
src/telemetry/logger/: LiveLogger.cpp
